The identity for Flows and Modules is 'name', for components its 'componentName', encapsulte logic within 'identity'